# plain-text-notes

./: .gitignore  .readthedocs.yaml  environment.yml  plain_text_notes.code-workspace  pyproject.toml
archive/: a_small_git.rst
docs/: conf.py  index.rst  requirements.txt
docs/general/: plain_text_notes.rst
docs/source/: conf.py  index.rst
docs/source/general/: a_small_git.rst  plain_text_notes.rst
