[project]
name = "plain-text-notes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "myst-parser>=5.1.0",
    "pre-commit>=4.6.0",
    "pre-commit-uv>=4.2.2",
    "sphinx>=9.1.0",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-rtd-theme>=3.1.0",
    "sphinxemoji>=0.3.2",
]
